# zstd-soil-volume

./: Cargo.toml  Makefile  README.md
.git-hooks/: pre-commit
.github/workflows/: release.yaml
src/: args.rs  main.rs
src/commands/: encode.rs  mod.rs
tests/data/: volume.raw.zst
